# squelch-tr-uploader

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md  squelch_uploader.cc
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/agents/: cpp-expert.agent.md  python-expert.agent.md  reviewer.agent.md  testing-expert.agent.md  wire-contract-expert.agent.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/plans/: build-out-plan.md  squelch-wire-contract.md  wire-contract-extensions.md
plugin/: CMakeLists.txt  README.md  squelch_uploader.cc
plugin/include/: squelch_uploader.h
plugin/include/squelch_uploader/: config.h  http_client.h  retry_policy.h  upload_request.h  upload_worker.h  uploader.h
plugin/src/: config.cc  http_client.cc  http_client_util.cc  retry_policy.cc  squelch_uploader.cc  upload_request.cc  upload_worker.cc  uploader.cc
plugin/test/: CMakeLists.txt  test_config.cc  test_http_client.cc  test_retry_policy.cc  test_upload_request.cc  test_upload_worker.cc  test_uploader.cc
script/: README.md  pyproject.toml  upload.py
script/tests/: test_upload.py
scripts/: make-upstream-tree.sh
upstream/: README.md
upstream/plugins/squelch_uploader/: CMakeLists.txt
