[project]
name = "squelch-tr-upload-script"
version = "0.1.0"
description = "Trunk-Recorder uploadScript fallback for Squelch"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "responses>=0.25",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
